<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_titulo">Aplicativo Lista VIP devandroid.johnston.applistacurso.model.Curso Android</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_nome_do_curso">Nome do devandroid.johnston.applistacurso.model.Curso Desejado</string>
    <string name="txt_hint_edit_telefone_contato">Telefone de Contato</string>
    <string name="txt_buttom_limpar">LIMPAR</string>
    <string name="txt_buttom_salvar">SALVAR</string>
    <string name="txt_buttom_finalizar">FINALIZAR</string>
</resources>